[package]
name = "do-dns-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stunclient = {version = "0.4", default-features = false}
ureq = {version = "2", features = ["json"]}
serde = { version = "1", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
